--- a/packages/docs/src/lang/en/vuetify/AppDrawer.json
+++ b/packages/docs/src/lang/en/vuetify/AppDrawer.json
@@ -41,6 +41,7 @@
   "expansionPanels": "Expansion panels",
   "fabs": "Buttons: Floating action buttons",
   "faq": "Frequently asked questions",
+  "featureDiscovery": "Feature discovery",
   "footer": "Footer",
   "forms": "Forms",
   "frameworkOptions": "Framework options",
